fixed walkthrough on small screens

--- a/letslightthiscandle.css
+++ b/letslightthiscandle.css
@@ -607,8 +607,8 @@ section {
   }
   .home {
     padding: 3rem 0;
-    min-height: auto;
-  }
+/*    min-height: auto;
+*/  }
   .header__nav {
     position: absolute;
     top: 0;
